# website

./: .drone.yml  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  flake.nix  module.nix  package.json  package.nix  pnpm-lock.yaml  scrape.py  svelte.config.js  vite.config.ts
.github/workflows/: docker-image.yml  main.yml
awards/: 1_treeprot.md  1_treeprot.yml  2_aipo.md  2_aipo.yml  3_irlcpc1.md  3_irlcpc1.yml  4_btyse.md  4_btyse.yml  5_irlcpc2.md  5_irlcpc2.yml  6_ieeextreme.md  6_ieeextreme.yml
projects/: 100_ascii-trace.md  100_ascii-trace.yml  101_pitch-test.md  101_pitch-test.yml  101_website.yml  102_steam-notifications.md  102_steam-notifications.yml  103_hastyhop.md  103_hastyhop.yml  104_tree.md  104_tree.yml  95_klipr.md  95_klipr.yml  96_clip-muncher.md  96_clip-muncher.yml  99_pitch-test.yml  99_website.md  99_website.yml  categories.yml  test.yml
src/: app.html  awards.rs  categories.rs  main.rs  prism-gruvbox-dark.css  project.rs  projects.rs  render.rs  scss.rs  tailwind.config.js
src/awards/: 1_treeprot.md  2_aipo.md  3_irlcpc1.md  4_btyse.md  5_irlcpc2.md  6_ieeextreme.md
src/layouts/: blog-post.layout.svelte
src/lib/: config.ts  index.ts  utils.ts
src/models/: awards.rs  categories.rs  mod.rs  project.rs  projects.rs
src/posts/: hi.md
src/projects/: 100_ascii-trace.md  101_website.md  102_steam-notifications.md  103_hastyhop.md  103_hastyhop.yml  104_tree.md  104_tree.yml  50_test.yml  95_klipr.md  99_pitch-test.md  99_pitch-test.yml  ascii-trace.yml  categories.yml  website.yml
(+38 files in other folders)
