[package]
name = "website"
version = "0.1.0"
authors = ["oofsauce <alanpanayotov@gmail.com>"]
edition = "2018"

[[bin]]
name = "website"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4.11"