[package]
name = "website"
version = "0.1.0"
authors = ["oofsauce <alanpanayotov@gmail.com>"]
edition = "2018"

[[bin]]
name = "website"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
log = "0.4.11"
handlebars = { version = "3.5.1", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sass-rs = "0.2.1"
lazy_static = "1.4.0"