[package]
name = "website"
version = "0.1.0"
authors = ["alanpq <alanpanayotov@gmail.com>"]
edition = "2018"

[[bin]]
name = "website"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
log = "0.4.11"
simple_logger = "2.1.0"
handlebars = { version = "4", features = ["dir_source"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rsass = "0.23.4"
lazy_static = "1.4.0"
notify = "4.0.15"
yaml-rust = "0.4.5"
markdown = "1.0.0-alpha.22"
toml = "0.8.20"
